# browser-automation-hub

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  skills-lock.json  tasks.db
app/: README.md  auth.py  automation_runner.py  config.py  database.py  main.py  models.py  schemas.py  worker.py
app/routers/: __init__.py  tasks.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: SubmitForm.tsx  TaskTable.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  TaskDetailPage.tsx
